# brain

./: .gitignore  CMakeLists.txt
example/: main.cpp
src/: activation.hpp  neuron.hpp
src/brain/: brain.hpp  connection.cpp  connection.hpp  connection_builder.cpp  connection_builder.h  layer.cpp  layer.hpp  network.cpp  network.hpp  sigmoid.cpp  sigmoid.hpp
